Lazy service call

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
             <div ng-controller="SearchController as vm">
                 <form class="form-inline-lg" ng-submit="vm.search()">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Film title..." ng-model="vm.query">
+                        <input type="text" class="form-control"
+                               placeholder="Film title..." ng-model="vm.query"
+                        ng-keyup="vm.keyup()" ng-keydown="vm.keyDown()">
             <span class="input-group-btn">
               <button class="btn btn-default" type="button" ng-click="vm.search()">Go!</button>
             </span>
