--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,15 @@
 
     <script type="text/javascript" src="https://code.angularjs.org/1.4.4/angular.min.js"></script>
     <script type="text/javascript" src="https://code.angularjs.org/1.4.4/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.4.4/angular-resource.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.min.js"></script>
 
-    <script type="text/javascript" src="omdb/service.js"></script>
-    <script type="text/javascript" src="movie-app/app.js"></script>
-    <script type="text/javascript" src="movie-app/search.controller.js"></script>
-    <script type="text/javascript" src="movie-app/results.controller.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="services/movieService.js"></script>
+    <script type="text/javascript" src="services/popularMovieService.js"></script>
+    <script type="text/javascript" src="controllers/search.controller.js"></script>
+    <script type="text/javascript" src="controllers/results.controller.js"></script>
+    <script type="text/javascript" src="controllers/home.controller.js"></script>
 
 </body>
 </html>
