--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
     <script type="text/javascript" src="controllers/search.controller.js"></script>
     <script type="text/javascript" src="controllers/results.controller.js"></script>
     <script type="text/javascript" src="controllers/home.controller.js"></script>
+    <script type="text/javascript" src="directive/movie-result.directive.js"></script>
 
 </body>
 </html>
