Testing a filter and dates with TzDate

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script type="text/javascript" src="controllers/results.controller.js"></script>
     <script type="text/javascript" src="controllers/home.controller.js"></script>
     <script type="text/javascript" src="directive/movie-result.directive.js"></script>
+    <script type="text/javascript" src="filter/from-now.filter.js"></script>
 
 </body>
 </html>
