Added simpleService no dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="services/movieService.js"></script>
     <script type="text/javascript" src="services/popularMovieService.js"></script>
+    <script type="text/javascript" src="services/simpleService.js"></script>
     <script type="text/javascript" src="controllers/search.controller.js"></script>
     <script type="text/javascript" src="controllers/results.controller.js"></script>
     <script type="text/javascript" src="controllers/home.controller.js"></script>
