Adds more examples

--- a/app/index.html
+++ b/app/index.html
@@ -55,8 +55,10 @@
     <script type="text/javascript" src="services/movieService.js"></script>
     <script type="text/javascript" src="services/popularMovieService.js"></script>
     <script type="text/javascript" src="services/simpleService.js"></script>
+    <script type="text/javascript" src="services/employeeService.js"></script>
     <script type="text/javascript" src="controllers/search.controller.js"></script>
     <script type="text/javascript" src="controllers/results.controller.js"></script>
+    <script type="text/javascript" src="controllers/employee.controller.js"></script>
     <script type="text/javascript" src="controllers/home.controller.js"></script>
     <script type="text/javascript" src="directive/movie-result.directive.js"></script>
     <script type="text/javascript" src="filter/from-now.filter.js"></script>
